# FASTAPI-MASTERCLASS

./: custom_log.py  exceptions.py  fastapi-practice.db  log.txt  main.py  pyproject.toml  schemas.py  test_main.py
auth/: authentication.py
db/: database.py  db_article.py  db_user.py  hash.py  models.py
files/: 002 File_en.srt  text.txt
routers/: article.py  blog_post.py  blogs_get.py  dependencies.py  file.py  product.py  user.py
templates/: product.html  templates.py
templates/static/: style.css
